--- a/greenart.html
+++ b/greenart.html
@@ -1,75 +1,82 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
     <head>
-
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="layout.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>RinatanArt</title>
-
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="layout.css">
+        <link rel="shortcut icon" href="MC2/favicon.png">
+        <title>RinatanArt</title>
     </head>
 
 <body>
 
-<!--ヘッダー部分-->
-<div class="header">
+    <!--ヘッダー部分-->
+    <div class="header-big">
 
-<div class="header-logo">
-<p><a href="index.html">RinatanArt</a></p>
-</div>
-
-<div class="header-list">
-<ul>
- <li><a href="aboutsite.html">このサイトについて</a></li>
- <li><a href="guzzu.html">グッズ</a></li>
- <li><a href="other.html">その他</a></li>
-</ul>
-</div>
-
-</div>
-<!--ヘッダー部分終了-->
+        <div class="header-logo-big">
+        <p><a href="index.html">RinatanArt</a></p>
+        </div>
 
 
+        <div class="header-list-big">
+            <ul>
+            <li><a href="aboutsite.html">このサイトについて</a></li>
+            <li><a href="guzzu.html">グッズ</a></li>
+            <li><a href="other.html">その他</a></li>
+            </ul>
+        </div>
 
-<!--ヘッダー2つ目-->
-<div class="header2">
+    </div>
 
-<p>green.</p>
+    <div class="header-small">
 
-</div>
-<!--ヘッダー2つ目終了-->
+        <div class="header-logo-small">
+        <p><a href="index.html">RinatanArt</a></p>
+        </div>
 
 
-<!--メイン部分-->
-<div class="art-main">
+        <div class="header-list-small">
+            <ul>
+            <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+            <li><a href="guzzu.html">グッズ</a></li>
+            <li><a href="other.html">その他</a></li>
+            </ul>
+        </div>
 
-<div class="art">
-<img  id="green-phone" src="MC2/Heyphone.png" alt="phone">
-<div class="artdes">
-<p>電話ボックスから出てきてしまったよ</p>
-<p>電話にあるべきはずのダイヤルボタンはどこへ？？？</p>
-<p>番号を口頭で言うと相手に繋げてくれます。</p>
-</div>
-
-<div class="good" id="good1">
-<button type="submit">Good💕</button>
-</div>
-
-</div>
+    </div>
 
 
 
-
-
-</div>
-
-<!--メイン部分終了-->
+    <!--ヘッダー終了-->
 
 
 
-<script src="action.js"></script>
+    <!--ヘッダー2つ目-->
+    <div class="header2" style="background-color: rgba(191,255,127,0.2);">
+
+    <p style="color:#f4ffea; text-shadow: lightgreen 1px 0px 10px;">green</p>
+
+    </div>
+    <!--ヘッダー2つ目終了-->
+
+
+    <!--メイン部分-->
+    <div class="art-main">
+
+        <div class="art-green">
+            <img  id="green-phone" src="MC2/Heyphone.png" alt="phone">
+        </div>
+
+
+
+
+
+    </div>
+
+    <!--メイン部分終了-->
+
+
+
+<script></script>
 
 </body>
 
