--- a/orangeart.html
+++ b/orangeart.html
@@ -1,44 +1,76 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
-<head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="layout.css">
+        <link rel="shortcut icon" href="MC2/favicon.png">
+        <title>orangeart</title>
+    </head>
 
-<meta charset="UTF-8">
-<link rel="stylesheet" href="layout.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<title>RinatanArt</title>
+    <body>
+        <!--ヘッダー部分-->
+        <div class="header-big">
 
-</head>
-
-<body>
-
-<!--ヘッダー部分-->
-<div class="header">
-
-<div class="header-logo">
-<p><a href="index.html">RinatanArt</a></p>
-</div>
-
-<div class="header-list">
-<ul>
- <li><a href="aboutsite.html">このサイトについて</a></li>
- <li><a href="guzzu.html">グッズ</a></li>
- <li><a href="other.html">その他</a></li>
-</ul>
-</div>
-
-</div>
-<!--ヘッダー部分終了-->
-
-<h1>作品のページ</h1>
+            <div class="header-logo-big">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
+            <div class="header-list-big">
+                <ul>
+                <li><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="header-small">
+
+            <div class="header-logo-small">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
-<script src="action.js"></script>
+            <div class="header-list-small">
+                <ul>
+                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
 
 
-</body>
+        <!--ヘッダー終了-->
+
+        <!--ヘッダー2つ目-->
+        <div class="header2" style="background-color: rgba(255,191,127,0.2);">
+            <p style="color:#fff4ea; text-shadow: orange 1px 0px 10px;">orange</p>
+        </div>
+        <!--ヘッダー2つ目終了-->
+
+
+        <!--メイン部分-->
+        <div class="art-main">
+
+            <div class="art-orange">
+                <h3>お絵描き中</h3>
+            </div>
+            
+        </div>
+
+        <!--メイン部分終了-->
+
+
+
+    <script></script>
+
+
+
+
+    </body>
 
 </html>
