--- a/purpleart.html
+++ b/purpleart.html
@@ -1,39 +1,67 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
     <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="layout.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="shortcut icon" href="MC2/favicon.png">
     <title>RinatanArt</title>
     </head>
 
     <body>
-
         <!--ヘッダー部分-->
-        <div class="header">
+        <div class="header-big">
 
-            <div class="header-logo">
-                <p><a href="index.html">RinatanArt</a></p>
+            <div class="header-logo-big">
+            <p><a href="index.html">RinatanArt</a></p>
             </div>
 
-            <div class="header-list">
+
+            <div class="header-list-big">
                 <ul>
-                    <li><a href="aboutsite.html">このサイトについて</a></li>
-                    <li><a href="guzzu.html">グッズ</a></li>
-                    <li><a href="other.html">その他</a></li>
+                <li><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
                 </ul>
             </div>
 
         </div>
-        <!--ヘッダー部分終了-->
 
-    <h1>作品のページ</h1>
+        <div class="header-small">
+
+            <div class="header-logo-small">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
+
+
+            <div class="header-list-small">
+                <ul>
+                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <!--ヘッダー終了-->
+
+        <!--ヘッダー2つ目-->
+        <div class="header2" style="background-color: rgba(191,127,255,0.2);">
+            <p style="color:#f4eaff; text-shadow:purple 1px 0px 10px;">purple</p>
+        </div>
+        <!--ヘッダー2つ目終了-->
+
+        <div class="art-main">
+
+            <div class="art-purple">
+                <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">    
+            </div>
+            
+        </div>
 
 
 
-    <script src="action.js"></script>
+    <script></script>
 
     </body>
 
