--- a/yellowart.html
+++ b/yellowart.html
@@ -1,36 +1,57 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
     <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="layout.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>RinatanArt</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="layout.css">
+        <link rel="shortcut icon" href="MC2/favicon.png">
+        <title>RinatanArt</title>
     </head>
 
     <body>
 
         <!--ヘッダー部分-->
-        <div class="header">
-            <div class="header-logo">
-                <p><a href="index.html">RinatanArt</a></p>
+        <div class="header-big">
+
+            <div class="header-logo-big">
+            <p><a href="index.html">RinatanArt</a></p>
             </div>
 
-            <div class="header-list">
+
+            <div class="header-list-big">
                 <ul>
-                    <li><a href="aboutsite.html">このサイトについて</a></li>
-                    <li><a href="guzzu.html">グッズ</a></li>
-                    <li><a href="other.html">その他</a></li>
+                <li><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
                 </ul>
             </div>
+
         </div>
-        <!--ヘッダー部分終了-->
+
+        <div class="header-small">
+
+            <div class="header-logo-small">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
+
+
+            <div class="header-list-small">
+                <ul>
+                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+
+        <!--ヘッダー終了-->
 
         <!--ヘッダー2つ目-->
-        <div class="header2">
+        
+        <div class="header2" style="background-color: rgba(255,255,127,0.2); ">
 
-            <p>yellow.</p>
+            <p style="color:#ffffea; text-shadow: yellow 1px 0px 10px;">yellow</p>
 
         </div>
         <!--ヘッダー2つ目終了-->
@@ -39,42 +60,19 @@
     <!--メイン部分-->
     <div class="art-main">
 
-        <div class="art">
-            <img src="MC2/ひもパイナップル.png" alt="パイン">
-            <div class="artdes">
-            <p>夏しか登場しないと思ったら大間違い。</p>
-            <p>絨毯さえあればそこはもう僕の世界さ～。今を楽しもう～</p>
-            <p>PP〇P感が否めない…。足の曲げ具合もポイント</p>
+        <div class="art-yellow">
+            <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">
         </div>
 
-        <div class="good" id="good1">
-            <button type="submit">Good💕</button>
-        </div>
+
 
     </div>
 
-
-    <div class="art">
-        <div class="artdes">
-            <p>一旦休憩～、取ってきたチーズ食べちゃおうかな～</p>
-            <p>ネズミはチーズ嫌いって言うけど、僕は目がないですわ♥</p>
-            <p>ちゃっかりお花まで摘んできて、誰かにお届けかな…</p>
-        </div>
-        <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">
-
-        <div class="good" id="good1">
-            <button type="submit">Good💕</button>
-        </div>
-
-    </div>
-
-
-    </div>
 
     <!--メイン部分終了-->
 
 
-    <script src="action.js"></script>
+    <script></script>
 
     </body>
 
