--- a/guzzu.html
+++ b/guzzu.html
@@ -4,6 +4,15 @@
         <link rel="stylesheet" href="layout.css">
         <link rel="shortcut icon" href="MC2/favicon.png">
         <title>RinatanArt</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z1XG02672"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-3Z1XG02672');
+        </script>
     </head>
 
 
