--- a/aboutsite.html
+++ b/aboutsite.html
@@ -1,59 +1,83 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
 
-<head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="layout.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<title>RinatanArt</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="layout.css">
+        <link rel="shortcut icon" href="MC2/favicon.png">
+        <title>RinatanArt</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z1XG02672"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-3Z1XG02672');
+        </script>
+    </head>
 
 
 
-<body>
+    <body>
+        
+        <!--ヘッダー部分-->
+        <div class="header-big">
+
+            <div class="header-logo-big">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
-<!--ヘッダー部分-->
-<div class="header">
+            <div class="header-list-big">
+                <ul>
+                <li><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
 
-<div class="header-logo">
-<p><a href="index.html">RinatanArt</a></p>
-</div>
+        </div>
 
-<div class="header-list">
-<ul>
- <li><a href="aboutsite.html">このサイトについて</a></li>
- <li><a href="guzzu.html">グッズ</a></li>
- <li><a href="other.html">その他</a></li>
-</ul>
-</div>
+        <div class="header-small">
 
-</div>
-<!--ヘッダー終了-->
-
-<div class="about">
+            <div class="header-logo-small">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
-<p>～～Thanks for coming today～～</p>
-<p>ご来場いただきまして誠にありがとうございます</p>
+            <div class="header-list-small">
+                <ul>
+                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <!--ヘッダー部分終了--->
+
+
+        <div class="art-main">
+
+            <div class="art">
+                <h3>このサイトでは自分で考えたキャラクターや服のデザインを載せています</h3>
+                <h3>描いたものを自分の思い出として残しています</h3>
+            </div>
+            
+        </div>
 
 
 
-</div>
 
 
 
 
 
 
+    <script></script>
 
-
-
-<script src="action.js"></script>
-
-</body>
+    </body>
 
 
 
