--- a/redart.html
+++ b/redart.html
@@ -1,49 +1,79 @@
-<!DOCTYPE html>
-
 <html lang="ja">
 
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="shortcut icon" href="MC2/favicon.png">
+    <title>RinatanArt</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z1XG02672"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-<meta charset="UTF-8">
-<link rel="stylesheet" href="layout.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<title>RinatanArt</title>
-
+        gtag('config', 'G-3Z1XG02672');
+    </script>
 </head>
 
 <body>
 
-<!--ヘッダー部分-->
-<div class="header">
+        <!--ヘッダー部分-->
+        <div class="header-big">
 
-<div class="header-logo">
-<p><a href="index.html">RinatanArt</a></p>
-</div>
-
-<div class="header-list">
-<ul>
- <li><a href="aboutsite.html">このサイトについて</a></li>
- <li><a href="guzzu.html">グッズ</a></li>
- <li><a href="other.html">その他</a></li>
-</ul>
-</div>
-
-</div>
-<!--ヘッダー部分終了-->
+            <div class="header-logo-big">
+            <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
-<div class="header2">
+            <div class="header-list-big">
+                <ul>
+                <li><a href="aboutsite.html">このサイトについて</a></li>
+                <li><a href="guzzu.html">グッズ</a></li>
+                <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="header-small">
+
+            <div class="header-logo-small">
+                <p><a href="index.html">RinatanArt</a></p>
+            </div>
 
 
-<p>red.</p>
+            <div class="header-list-small">
+                <ul>
+                    <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
+                    <li><a href="guzzu.html">グッズ</a></li>
+                    <li><a href="other.html">その他</a></li>
+                </ul>
+            </div>
+
+        </div>
 
 
-</div>
+        <!--ヘッダー終了-->
+
+
+    <div class="header2"  style="background-color: rgba(255,127,127,0.2); ">
+        <p style="color:#ffeaea; text-shadow: red 1px 0px 10px;">red</p>
+    </div>
+
+    <div class="art-main">
+
+        <div class="art-red">
+            <h3>お絵描き中</h3>
+
+        </div>
+        
+    </div>
 
 
 
 
-<script src="action.js"></script>
+<script></script>
 
 
 </body>
