--- a/other.html
+++ b/other.html
@@ -58,7 +58,7 @@
 
         <!--main-->
         
-        <h4>サイトのURL貼る</h4>
+        <h4 style="text-align: center;">未定</h4>
 
 
         <!--main終了-->
