other_about resite

--- a/guzzu.html
+++ b/guzzu.html
@@ -60,9 +60,14 @@
 
         <div class="art-main">
 
-            <div class="art">
-                <h3>未定です</h3>
-                
+            <div class="guzzu">
+                <h4>BOOTHで販売しています</h4>
+                <h4>種類はまだまだ少ないですが立ち寄ってみてください</h4>
+                <div id="guzzu_page">
+                    <a href="https://edamamender.booth.pm/">
+                    <input id="guzz_look_btn" type="button" value="グッズを見てみる" onclick="Guzzu_btn()">
+                    </a>
+                </div>           
 
             </div>
             
@@ -72,19 +77,12 @@
 
         <!--main-->
 
+    <script>
+        function Guzzu_btn(){
+            document.getElementById("guzzu_look_btn").style.backgroundColor = "#ffe5ff";
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-    <script></script>
+    </script>
 
     </body>
 
