--- a/light-blueart.html
+++ b/light-blueart.html
@@ -64,8 +64,7 @@
     <div class="art-main">
 
         <div class="art-lightblue">
-            <h3>お絵描き中</h3>
-
+            <img  id="lightblue_munyo" src="MC2/lightblue_munyo.png" alt="lbmunyo">
         </div>
         
     </div>
