--- a/pinkart.html
+++ b/pinkart.html
@@ -74,6 +74,10 @@
             -->
 
             </div>
+
+            <div class="art-pink">
+                <img id="pink_munyo" src="MC2/pink_munyo.png" alt="pmunyo">
+            </div>
             
         </div>
 
