--- a/other.html
+++ b/other.html
@@ -57,8 +57,10 @@
         <!--ヘッダー終了部分-->
 
         <!--main-->
-        
-        <h4 style="text-align: center;">未定</h4>
+        <div id="other">
+
+            <h4>未定です</h4>
+        </div>
 
 
         <!--main終了-->
