--- a/cloth.html
+++ b/cloth.html
@@ -70,6 +70,10 @@
         <div class="art-cloth">
             <img src="MC2/green_yellow.jpg" alt="cloth_yellow">
         </div>
+
+        <div class="art-cloth">
+            <img src="MC2/black_redflower.jpeg" alt="cloth_black_red">
+        </div>
         
     </div>
 
