--- a/aboutsite.html
+++ b/aboutsite.html
@@ -76,7 +76,21 @@
 
 
 
-    <script></script>
+    <script>
+        setInterval(function(){
+            document.oncontextmenu = function(){
+                return false;
+            }
+        },100) ; 
+
+        document.getElementsByTagName('html')[0].oncontextmenu = function(){
+            return false;
+        }
+        document.body.oncontextmenu = function(){
+            return false;
+        }
+        oncopy = "return false";
+    </script>
 
     </body>
 
