--- a/purpleart.html
+++ b/purpleart.html
@@ -63,14 +63,29 @@
         <div class="art-main">
 
             <div class="art-purple">
-                <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">    
+                <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">
+                <img src="MC2/flower_heart_swirl.png" alt="four_flower">  
             </div>
             
         </div>
 
 
 
-    <script></script>
+    <script>
+        setInterval(function(){
+            document.oncontextmenu = function(){
+                return false;
+            }
+        },100) ; 
+
+        document.getElementsByTagName('html')[0].oncontextmenu = function(){
+            return false;
+        }
+        document.body.oncontextmenu = function(){
+            return false;
+        }
+        oncopy = "return false";
+    </script>
 
     </body>
 
