--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
 
     </body>
 
-    <script></script>
+    <script>
+        setInterval(function(){
+            document.oncontextmenu = function(){
+                return false;
+            }
+        },100) ; 
+
+        document.getElementsByTagName('html')[0].oncontextmenu = function(){
+            return false;
+        }
+        document.body.oncontextmenu = function(){
+            return false;
+        }
+        oncopy = "return false";
+        
+    </script>
 
 </html>
