--- a/guzzu.html
+++ b/guzzu.html
@@ -61,13 +61,17 @@
         <div class="art-main">
 
             <div class="guzzu">
-                <h4>BOOTHで販売しています</h4>
-                <h4>種類はまだまだ少ないですが立ち寄ってみてください</h4>
-                <div id="guzzu_page">
-                    <a href="https://edamamender.booth.pm/">
-                    <input id="guzz_look_btn" type="button" value="グッズを見てみる" onclick="Guzzu_btn()">
-                    </a>
-                </div>           
+               
+                <div class="comment_base">
+                    <p id="comment_base_first_p">BOOTHで販売しています</p>
+                    <p>種類はまだまだ少ないですが立ち寄ってみてください</p>
+                    <div id="guzzu_page_skip">
+                        <a href="https://edamamender.booth.pm/">
+                            <input id="guzz_look_btn" type="button" value="グッズを見てみる" onclick="Guzzu_btn()">
+                        </a>
+                    </div>
+
+                </div>    
 
             </div>
             
@@ -81,6 +85,19 @@
         function Guzzu_btn(){
             document.getElementById("guzzu_look_btn").style.backgroundColor = "#ffe5ff";
         }
+        setInterval(function(){
+            document.oncontextmenu = function(){
+                return false;
+            }
+        },100) ; 
+
+        document.getElementsByTagName('html')[0].oncontextmenu = function(){
+            return false;
+        }
+        document.body.oncontextmenu = function(){
+            return false;
+        }
+        oncopy = "return false";
 
     </script>
 
