--- a/aboutsite.html
+++ b/aboutsite.html
@@ -63,7 +63,7 @@
             <div class="about">
                 <div class="comment_base">
                     <p>〜サイトについて〜</p>
-                    <p>自分で考えたキャラクターや服のデザインを載せています</p>
+                    <p>キャラクターや服のデザインを載せています</p>
                     <p>ゆっくりご覧ください〜</p>
                 </div>
 
