--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <a href="cloth.html">
                 <div id="clothticket" class="color-item">
-                    <h5><span id="cloth">cloth</span></h5>
+                    <p id="color-item-cloth-p"><span id="cloth">cloth</span></p>
                 </div>
             </a>
 
