--- a/orangeart.html
+++ b/orangeart.html
@@ -66,7 +66,7 @@
         <div class="art-main">
 
             <div class="art-orange">
-                <h3>お絵描き中</h3>
+                <img src="MC2/flower_heart_swirl.png" alt="four_flower">
             </div>
             
         </div>
