--- a/cloth.html
+++ b/cloth.html
@@ -70,6 +70,7 @@
 
         <div class="art-cloth">
             <img src="MC2/black_redflower.jpeg" alt="cloth_black_red">
+            <img src="MC2/three_set.png" alt="three_cloth">
         </div>
         
     </div>
