--- a/light-blueart.html
+++ b/light-blueart.html
@@ -65,6 +65,7 @@
 
         <div class="art-lightblue">
             <img  id="lightblue_munyo" src="MC2/lightblue_munyo.png" alt="lbmunyo">
+            <img src="MC2/light_blue_cloud.png" alt="lightblue_cloud">
         </div>
         
     </div>
