--- a/aboutsite.html
+++ b/aboutsite.html
@@ -63,11 +63,9 @@
             <div class="about">
                 <div class="comment_base">
                     <p>〜サイトについて〜</p>
-                    <p>キャラクターや服のデザインを載せています</p>
+                    <p>キャラクターや服のデザインなど掲載しています</p>
                     <p>ゆっくりご覧ください〜</p>
                 </div>
-
-
             </div>
             
         </div>
