--- a/blueart.html
+++ b/blueart.html
@@ -4,7 +4,7 @@
 
         <meta charset="UTF-8">
         <link rel="stylesheet" href="layout.css">
-        <link rel="shortcut icon" href="MC2/favicon.png">
+        <link rel="shortcut icon" href="MC2/favicon_1.png">
         <title>RinatanArt</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z1XG02672"></script>
