--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 
         <!--画面幅小-->
 
+        <!--news-->
+        <div class="news_part">
+            <p>4/5更新　『light blue』 『cloth』</p>
+        </div>
+        <!--news-->
+
         <div class="main">
 
             <!--
