--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!--news-->
         <div class="news_part">
-            <p>4/5更新　『light blue』 『cloth』</p>
+            <p>4/12更新　『blue』</p>
         </div>
         <!--news-->
 
