--- a/yellowart.html
+++ b/yellowart.html
@@ -71,6 +71,7 @@
 
         <div class="art-yellow">
             <img id="mouse-art" src="MC2/休憩ネズミ.png" alt="マウス">
+            <img src="MC2/chairs.png" alt="three_chair">
         </div>
 
 
