--- a/blueart.html
+++ b/blueart.html
@@ -68,8 +68,7 @@
         <div class="art-main">
 
             <div class="art-blue">
-                <h3>お絵描き中</h3>
-    
+                <img src="MC2/chairs.png" alt="three_chair">    
             </div>
             
         </div>
