--- a/cloth.html
+++ b/cloth.html
@@ -72,6 +72,11 @@
             <img src="MC2/black_redflower.jpeg" alt="cloth_black_red">
             <img src="MC2/three_set.png" alt="three_cloth">
         </div>
+    
+        <div class="art-cloth">
+            <img src="MC2/pink_white_connect.png" alt="pink_white_tsunagi">
+
+        </div>
         
     </div>
 
