--- a/cloth.html
+++ b/cloth.html
@@ -74,7 +74,7 @@
         </div>
     
         <div class="art-cloth">
-            <img src="MC2/pink_white_connect.png" alt="pink_white_tsunagi">
+            <img src="MC2/white_pink_connect2.png" alt="pink_white_tsunagi">
 
         </div>
         
