--- a/cloth.html
+++ b/cloth.html
@@ -75,7 +75,7 @@
     
         <div class="art-cloth">
             <img src="MC2/white_pink_connect2.png" alt="pink_white_tsunagi">
-
+            <img src="MC2/blue_fish_flower.png" alt="blue_fish_flower">
         </div>
         
     </div>
