--- a/cloth.html
+++ b/cloth.html
@@ -80,7 +80,7 @@
 
         <div class="art-cloth">
             <img src="MC2/hotdog__tshirts.png" alt="hotdog__tshirts">
-
+            <img src="MC2/lightblue_flower_dress.png" alt="lbflowr_dress">
         </div>
         
     </div>
