add cloth, add text in other.html

--- a/cloth.html
+++ b/cloth.html
@@ -82,6 +82,10 @@
             <img src="MC2/hotdog__tshirts.png" alt="hotdog__tshirts">
             <img src="MC2/lightblue_flower_dress.png" alt="lbflowr_dress">
         </div>
+
+        <div class="art-cloth">
+            <img src="MC2/one_piece_clothes_rose.png" alt="onet_piece_rose">
+        </div>
         
     </div>
 
