--- a/other.html
+++ b/other.html
@@ -60,7 +60,8 @@
         <div id="other">
             <div class="comment_base">
                 <p id="other_comment_base_p">作成中です</p>
-                <p>もうしばらくお待ちください</p>
+                <p>30%完成してます</p>
+                <p>あともう少し</p>
             </div>
         </div>
 
