add cloth rename fashion

--- a/cloth.html
+++ b/cloth.html
@@ -85,6 +85,7 @@
 
         <div class="art-cloth">
             <img src="MC2/one_piece_clothes_rose.png" alt="onet_piece_rose">
+            <img src="MC2/puple_lace.png" alt="purple_lace">
         </div>
         
     </div>
