--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!--news-->
         <div class="news_part">
-            <p>5/17更新　『cloth』</p>
+            <p>5/24更新　『fashion』</p>
         </div>
         <!--news-->
 
@@ -156,7 +156,7 @@
 
             <a href="cloth.html">
                 <div id="clothticket" class="color-item">
-                    <p id="color-item-cloth-p"><span id="cloth">cloth</span></p>
+                    <p id="color-item-cloth-p"><span id="cloth">fashion</span></p>
                 </div>
             </a>
 
