--- a/cloth.html
+++ b/cloth.html
@@ -87,6 +87,10 @@
             <img src="MC2/one_piece_clothes_rose.png" alt="onet_piece_rose">
             <img src="MC2/puple_lace.png" alt="purple_lace">
         </div>
+
+        <div class="art-cloth">
+            <img src="MC2/soutien_collar_coat.png" alt="soutien_collar_coat">
+        </div>
         
     </div>
 
