--- a/blueart.html
+++ b/blueart.html
@@ -68,7 +68,8 @@
         <div class="art-main">
 
             <div class="art-blue">
-                <img src="MC2/chairs.png" alt="three_chair">    
+                <img src="MC2/chairs.png" alt="three_chair">
+                <img src="MC2/flower_foot.png" alt="flower_foot">   
             </div>
             
         </div>
