--- a/greenart.html
+++ b/greenart.html
@@ -80,6 +80,11 @@
             <img  id="green_munyo" src="MC2/green_munyo.png" alt="gmunyo">
         </div>
 
+        <div class="art-green">
+            <img src="MC2/flower_foot.png" alt="flower_foot">
+        </div>
+
+
 
 
 
