--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!--news-->
         <div class="news_part">
-            <p>6/2更新『fashion』</p>
+            <p>6/11更新『green』『blue』</p>
         </div>
         <!--news-->
 
