--- a/blueart.html
+++ b/blueart.html
@@ -72,6 +72,10 @@
                 <img src="MC2/flower_foot.png" alt="flower_foot">   
             </div>
             
+            <div class="art-blue">
+                <img src="MC2/blue_cloud.png" alt="blue_cloud"> 
+            </div>
+
         </div>
         
 
