--- a/greenart.html
+++ b/greenart.html
@@ -82,6 +82,7 @@
 
         <div class="art-green">
             <img src="MC2/flower_foot.png" alt="flower_foot">
+            <img src="MC2/blue_cloud.png" alt="blue_cloud">
         </div>
 
 
