--- a/purpleart.html
+++ b/purpleart.html
@@ -67,6 +67,11 @@
                 <img src="MC2/flower_heart_swirl.png" alt="four_flower">  
             </div>
             
+            <div class="art-purple">
+                <img src="MC2/blue_cloud.png" alt="blue_cloud"> 
+            </div>
+
+
         </div>
 
 
