--- a/yellowart.html
+++ b/yellowart.html
@@ -74,6 +74,10 @@
             <img src="MC2/chairs.png" alt="three_chair">
         </div>
 
+        <div class="art-yellow">
+            <img src="MC2/blue_cloud.png" alt="blue_cloud">
+        </div>
+
 
 
     </div>
