--- a/redart.html
+++ b/redart.html
@@ -65,6 +65,7 @@
 
         <div class="art-red">
             <img src="MC2/flower_heart_swirl.png" alt="four_flower">
+            <img src="MC2/three_line.png" alt="three_line">
         </div>
         
     </div>
