--- a/purpleart.html
+++ b/purpleart.html
@@ -69,6 +69,7 @@
             
             <div class="art-purple">
                 <img src="MC2/blue_cloud.png" alt="blue_cloud"> 
+                <img src="MC2/three_line.png" alt="three_line">
             </div>
 
 
