--- a/yellowart.html
+++ b/yellowart.html
@@ -76,6 +76,7 @@
 
         <div class="art-yellow">
             <img src="MC2/blue_cloud.png" alt="blue_cloud">
+            <img src="MC2/three_line.png" alt="three_line">
         </div>
 
 
