--- a/blueart.html
+++ b/blueart.html
@@ -74,6 +74,11 @@
             
             <div class="art-blue">
                 <img src="MC2/blue_cloud.png" alt="blue_cloud"> 
+                <img src="MC2/dress.png" alt="blue_fress">
+            </div>
+
+            <div class="art-blue">
+                <img src="MC2/paji_1.png" alt="paji_1"> 
             </div>
 
         </div>
