--- a/cloth.html
+++ b/cloth.html
@@ -90,6 +90,12 @@
 
         <div class="art-cloth">
             <img src="MC2/soutien_collar_coat.png" alt="soutien_collar_coat">
+            <img src="MC2/paji_1.png" alt="paji_1">
+        </div>
+
+        <div class="art-cloth">
+            <img src="MC2/Pink-yellows.png" alt="pink_yellow">
+            <img src="MC2/dress.png" alt="dress">
         </div>
         
     </div>
