--- a/pinkart.html
+++ b/pinkart.html
@@ -78,6 +78,7 @@
 
             <div class="art-pink">
                 <img src="MC2/flower_heart_swirl.png" alt="four_flower">
+                <img src="MC2/Pink-yellows.png" alt="pink_yellow">
             </div>
                 
         </div>
