--- a/yellowart.html
+++ b/yellowart.html
@@ -79,6 +79,9 @@
             <img src="MC2/three_line.png" alt="three_line">
         </div>
 
+        <div class="art-yellow">
+            <img src="MC2/Pink-yellows.png" alt="pink_yellow">
+        </div>
 
 
     </div>
