--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!--news-->
         <div class="news_part">
-            <p>2022年 3月29日更新『Cloth』</p>
+            <p>2022年 3月29日更新『fashion』</p>
         </div>
         <!--news-->
 
